# arm_test_project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/cli/: CliApp.hpp
include/core/: Config.hpp  Platform.hpp
include/core/algo/: SignalEnergy.hpp
include/core/bench/: Benchmark.hpp
include/gui/: App.hpp  Theme.hpp
include/gui/widgets/: BenchmarkView.hpp  ChartView.hpp  DemoView.hpp  ParticleField.hpp
scripts/: build.sh  build_and_run.sh  run.sh
src/app/: main.cpp
src/cli/: CliApp.cpp
src/core/: Platform.cpp
src/core/algo/: SignalEnergy.cpp  SignalEnergyScalar.cpp
src/core/bench/: Benchmark.cpp
src/gui/: App.cpp  Theme.cpp
src/gui/widgets/: BenchmarkView.cpp  ChartView.cpp  DemoView.cpp  ParticleField.cpp
